# danarbu

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh  update.sh
app/: __init__.py  queries.py  views.py
app/templates/: index.html
danarbu/: __init__.py  config.py  forms.py  models.py  views.py
danarbu/templates/: faersla.html  index.html  leitvilla.html  myndir.html  nidurstodur.html  static.html
docker/: Dockerfile  Dockerfile.mysql
