[tool.poetry]
name = "danarbu"
version = "0.1.0"
description = ""
authors = ["Johann Fridriksson <jof@jof.guru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
mysqlclient = "^2.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
