[tool.poetry]
name = "danarbu"
version = "0.1.0"
description = ""
authors = ["Johann Fridriksson <jof@jof.guru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-wtf = "^0.14.3"
flask-bootstrap4 = "^4.0.2"
flask-sqlalchemy = "^2.4.4"
mysqlclient = "^2.0.1"
sqlalchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
