[tool.poetry]
name = "danarbu"
version = "0.1.0"
description = ""
authors = ["Johann Fridriksson <jof@jof.guru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-wtf = "^0.14.3"
flask-sqlalchemy = "^2.4.4"
mysqlclient = "^2.0.1"
sqlalchemy = "^1.3.20"
flask-paginate = "^0.7.1"
flask-bs4 = "^4.5.3"
sqlalchemy_utils = "^0.36.8"
flask-debugtoolbar = "^0.11.0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
